# SolanaRustTest

./: Cargo.toml  REMEAD.md
src/: lib.rs  main.rs
