[package]
name = "solana-test"
version = "0.1.0"
edition = "2021"

[dependencies]
pinocchio = "0.9.2"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.4.0"
pinocchio-token = "0.4.0"
bytemuck = { version = "1.23.0", features = ["derive", "min_const_generics"] }
pinocchio-associated-token-account = "0.2.0"
anyhow={version="1.0.100"}
solana-sdk = { version = "3.0.0" }
solana-program-runtime = { version = "3.0.0" }
solana-client = { version = "3.0.0" }
solana-program = { version = "3.0.0" }
solana-system-interface = "3.0.0"
solana-commitment-config = "3.1.0"
spl-token-interface = "2.0.0"
spl-associated-token-account-interface={version="2.0.0"}
spl-token-2022-interface={version="2.1.0"}
spl-token-group-interface={version="0.7.1"}
solana-transaction-status-client-types = "3.0.12"
base64 = "0.22.1"
bincode = "1.3.3"
rand = { version = "0.9.2", features = ["std_rng"] }
password-hash = "0.5.0"  # 用于 PHC 字符串解析
tokio={version="1.48.0",features=["full"]}
argon2 = "0.5"      
futures = "0.3"
tiny-bip39={version="2.0.0"}
blake3 = { version = "1.5", features = ["rayon", "mmap"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry = {version="0.31.0",features=["trace", "metrics"]} # 核心库
opentelemetry_sdk = "0.31.0"
# 选择相应的 Exporter，例如 Jaeger 或 Prometheus
opentelemetry-jaeger = "0.22.0" # Jaeger Exporter
opentelemetry-prometheus = "0.29.1" # Prometheus Exporter
opentelemetry-stdout = "0.31.0" # Stdout Exporter for tracing
hyper={version="1.8.1"}
http-body-util = "0.1.3"
hyper-util = { version = "0.1.19", features = ["full"] }
rayon="1.11.0"
hashbrown = { version = "0.16.1", features = ["rayon"] }
[dev-dependencies]
mollusk-svm = { version = "0.8.0"}
solana-sdk = { version = "3.0.0"}
solana-program-runtime = { version = "3.0.0"}
once_cell="1.21.3"
